fixing - klik apapun malah toggle hamburger & dark mode features

--- a/src/input.css
+++ b/src/input.css
@@ -9,16 +9,15 @@
 }
 @layer components {
     .hamburger-line {
-        @apply w-[30px] h-[2px] my-2 block bg-dark;
+        @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
     }
 }
 @layer utilities {
 }
 
 .navbar-fixed {
-    @apply fixed z-[9999] backdrop-blur-sm text-slate-800;
+    @apply fixed z-[9999] bg-whiteBlur backdrop-blur-sm text-slate-800 dark:bg-darkBlur;
     /* @apply fixed z-[9999] text-slate-800 bg-[rgba(255,255,255,0.6)]; */
-    background-color: rgba(255, 255, 255, 0.6);
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 .hamburger-active > span:nth-child(1) {
@@ -29,4 +28,12 @@
 }
 .hamburger-active > span:nth-child(3) {
     @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
+}
+
+section#skills img {
+    @apply dark:invert dark:shadow-2xl;
 }
